add config for instana